Colaboratory を使用して作成しました

--- a/mathformula.ipynb
+++ b/mathformula.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "mathformula.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNLzONAgqGo/FBYcdNtXWp8",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMsALIPmiemgt4fn2WBk1GE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +46,7 @@
         "`=` の数がレベルになるのだろう。ちなみに `=` を 1 つのは使われていない。 `=` があまりに一般的な記号なのでリスク回避と思われるが未確認。アイデアとしては 2 つを # 1 つに変換してみる。\n",
         "2. 箇条書きを行頭の `*` の数でコントロールしているがこれも対応が必要。 箇条書きの入れ子が違う。\n",
         "3. `<math></math>` は &dollar; マーク 2 つで囲む方式に変換すると 1 文字変数も colab では別行センタリングされてしまうのでどうするか。\n",
-        "4. たの記事へのリンクを`[[]]` でやっているが今回の colab化では削除しよう。\n",
+        "4. 他の記事へのリンクを`[[]]` でやっているが今回の colab化では削除しよう。\n",
         "\n",
         "その他\n",
         "1. もっと言葉を足したい。 簡単な証明も入れたい。\n",
@@ -58,6 +59,7 @@
         "id": "3KMJO92WH6en"
       },
       "source": [
+        "---\n",
         "# 三平方の定理\n",
         "\n",
         "* 直角三角形の直角をはさむ2辺の長さを $a,b$、斜辺の長さを $c$ とすると、以下の関係が成り立つ。\n",
@@ -74,6 +76,7 @@
         "id": "OdjIax_bIoua"
       },
       "source": [
+        "---\n",
         "##  正弦定理\n",
         "$\\bigtriangleup{ABC}$ において、$BC = a, CA = b, AB = c$、外接円の半径を $R$とすると、\n",
         "$$\\frac{a}{\\sin A} =\\frac{b}{\\sin B} =\\frac{c}{\\sin C} =2R$$\n",
@@ -509,18 +512,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "dTCeYcEwMMW5",
-        "outputId": "374aa1a7-d3dc-4051-cdb9-d10a6ee11ee5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 234
-        }
+        },
+        "outputId": "374aa1a7-d3dc-4051-cdb9-d10a6ee11ee5"
       },
       "source": [
         "# cuboid\n",
         "%%html\n",
         "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"234.982\" height=\"212.274\"><defs><marker id=\"i\" refX=\"0\" refY=\"0\" orient=\"auto\" overflow=\"visible\"><path d=\"M4 0l2-2-7 2 7 2z\" fill-rule=\"evenodd\" stroke=\"#000\" stroke-width=\".4pt\"/></marker><marker id=\"g\" refX=\"0\" refY=\"0\" orient=\"auto\" overflow=\"visible\"><path d=\"M4 0l2-2-7 2 7 2z\" fill-rule=\"evenodd\" stroke=\"#000\" stroke-width=\".4pt\"/></marker><marker orient=\"auto\" refY=\"0\" refX=\"0\" id=\"e\" overflow=\"visible\"><path d=\"M4 0l2-2-7 2 7 2z\" fill-rule=\"evenodd\" stroke=\"#000\" stroke-width=\".4pt\"/></marker><marker id=\"j\" refX=\"0\" refY=\"0\" orient=\"auto\" overflow=\"visible\"><path d=\"M-4 0l-2 2 7-2-7-2z\" fill-rule=\"evenodd\" stroke=\"#000\" stroke-width=\".4pt\"/></marker><marker id=\"h\" refX=\"0\" refY=\"0\" orient=\"auto\" overflow=\"visible\"><path d=\"M-4 0l-2 2 7-2-7-2z\" fill-rule=\"evenodd\" stroke=\"#000\" stroke-width=\".4pt\"/></marker><marker orient=\"auto\" refY=\"0\" refX=\"0\" id=\"f\" overflow=\"visible\"><path d=\"M-4 0l-2 2 7-2-7-2z\" fill-rule=\"evenodd\" stroke=\"#000\" stroke-width=\".4pt\"/></marker><linearGradient id=\"b\"><stop offset=\"0\" stop-color=\"#6465c2\"/><stop offset=\"1\" stop-color=\"#6b6dfc\" stop-opacity=\".457\"/></linearGradient><linearGradient id=\"a\"><stop offset=\"0\" stop-color=\"#8c8dfd\"/><stop offset=\"1\" stop-color=\"#ccccfe\" stop-opacity=\"0\"/></linearGradient><linearGradient xlink:href=\"#a\" id=\"c\" x1=\"-240.815\" y1=\"334.619\" x2=\"-141.752\" y2=\"274.811\" gradientUnits=\"userSpaceOnUse\" gradientTransform=\"scale(1.3672) rotate(.938 5001.791 3313.81)\"/><linearGradient xlink:href=\"#b\" id=\"d\" x1=\"-124.996\" y1=\"305.277\" x2=\"-180.045\" y2=\"263.655\" gradientUnits=\"userSpaceOnUse\" gradientTransform=\"scale(1.3672) rotate(.938 5001.791 3313.81)\"/></defs><path d=\"M110.397 96.831L108.783 0l103.315 19.442-7.41 102.65z\" fill=\"#b0adfc\" fill-opacity=\".726\" fill-rule=\"evenodd\"/><path d=\"M110.397 96.831l-60.718 51.35 107.336 36.111 47.673-62.2z\" fill=\"#ababfe\" fill-opacity=\".726\" fill-rule=\"evenodd\"/><path d=\"M41.179 37.826L108.783 0l1.614 96.831-60.718 51.35z\" fill=\"#9494ff\" fill-opacity=\".726\" fill-rule=\"evenodd\"/><path d=\"M-260.753 236.816l119.772 28.013-3.936 118.453-107.336-36.111z\" fill=\"url(#c)\" fill-rule=\"evenodd\" transform=\"translate(301.932 -198.99)\"/><path d=\"M108.783 0L41.179 37.826l119.772 28.013 51.147-46.397z\" fill=\"#7f80d3\" fill-opacity=\".785\" fill-rule=\"evenodd\"/><path d=\"M-140.981 264.829l51.147-46.397-7.41 102.65-47.673 62.2z\" fill=\"url(#d)\" fill-rule=\"evenodd\" transform=\"translate(301.932 -198.99)\"/><path d=\"M-260.222 364.045l107.338 36.111\" fill=\"none\" stroke=\"#000\" stroke-width=\"1.367\" marker-start=\"url(#e)\" marker-end=\"url(#f)\" transform=\"translate(301.932 -198.99)\"/><path d=\"M-277.36 237.354l8.5 110.354\" fill=\"none\" stroke=\"#000\" stroke-width=\"1.367\" marker-start=\"url(#g)\" marker-end=\"url(#h)\" transform=\"translate(301.932 -198.99)\"/><path d=\"M-127.714 396.113l47.674-62.199\" fill=\"none\" stroke=\"#000\" stroke-width=\"1.367\" marker-start=\"url(#i)\" marker-end=\"url(#j)\" transform=\"translate(301.932 -198.99)\"/><text style=\"line-height:34.179676px;-inkscape-font-specification:'Comic Sans MS, Italic';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-indent:0;text-align:start;text-decoration-line:none;text-decoration-style:solid;text-decoration-color:#000;text-transform:none;white-space:normal;isolation:auto;mix-blend-mode:normal;solid-color:#000;solid-opacity:1\" x=\"-309.165\" y=\"-305.253\" transform=\"rotate(-94.817 59.504 -238.273)\" color=\"#000\" font-style=\"italic\" font-weight=\"400\" font-size=\"24\" font-family=\"Comic Sans MS\" letter-spacing=\"0\" word-spacing=\"0\" overflow=\"visible\" stroke-width=\"1.367\"><tspan x=\"-309.165\" y=\"-305.253\" style=\"-inkscape-font-specification:'Comic Sans MS, Italic';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start\">height</tspan></text><text style=\"line-height:34.179676px;-inkscape-font-specification:'Comic Sans MS, Italic';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-indent:0;text-align:start;text-decoration-line:none;text-decoration-style:solid;text-decoration-color:#000;text-transform:none;white-space:normal;isolation:auto;mix-blend-mode:normal;solid-color:#000;solid-opacity:1\" x=\"-104.716\" y=\"450.896\" transform=\"rotate(19.527 729.167 777.823)\" color=\"#000\" font-style=\"italic\" font-weight=\"400\" font-size=\"24\" font-family=\"Comic Sans MS\" letter-spacing=\"0\" word-spacing=\"0\" overflow=\"visible\" stroke-width=\"1.367\"><tspan x=\"-104.716\" y=\"450.896\" style=\"-inkscape-font-specification:'Comic Sans MS, Italic';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start\">width</tspan></text><text style=\"line-height:34.179676px;-inkscape-font-specification:'Comic Sans MS, Italic';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-indent:0;text-align:start;text-decoration-line:none;text-decoration-style:solid;text-decoration-color:#000;text-transform:none;white-space:normal;isolation:auto;mix-blend-mode:normal;solid-color:#000;solid-opacity:1\" x=\"-388.756\" y=\"162.287\" transform=\"rotate(-52.673 -50.024 -404.462)\" color=\"#000\" font-style=\"italic\" font-weight=\"400\" font-size=\"24\" font-family=\"Comic Sans MS\" letter-spacing=\"0\" word-spacing=\"0\" overflow=\"visible\" stroke-width=\"1.367\"><tspan x=\"-388.756\" y=\"162.287\" style=\"-inkscape-font-specification:'Comic Sans MS, Italic';font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-feature-settings:normal;text-align:start\">depth</tspan></text></svg>"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1074,14 +1077,7 @@
         "*確率変数 $$X$$が二項分布 $$B(n\\ ,\\ p)$$に従い、 $$q=1-p$$とする場合の平均値 $$E(X)$$, 分散 $$V(X)$$, 標準偏差 $$D(X)$\n",
         "$$\\ E(X) = np\\ $$\n",
         "$$\\ V(X) = npq\\ $$\n",
-        "$$\\ D(X) = \\sqrt{npq}$$\n",
-        "\n",
-        "<!--\n",
-        "#  関連項目\n",
-        "* [[Wikibooks:数学記号索引 (初等数学)]]\n",
-        "-->\n",
-        "[[Category:普通教育|しよとうすうかくこうしきしゆう]]\n",
-        "[[Category:数学教育|しよとうすうかくこうしきしゆう]]\n"
+        "$$\\ D(X) = \\sqrt{npq}$$\n"
       ],
       "execution_count": null,
       "outputs": []
