--- a/mathformula.ipynb
+++ b/mathformula.ipynb
@@ -6,7 +6,7 @@
       "name": "mathformula.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMZaSMi0p2g4plMXweZ1OXR",
+      "authorship_tag": "ABX9TyNGdszpycLvU4HWNslLOEuE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,19 +110,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "POsi22kRCJrO"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "-1YOqHoLbTW0"
       },
       "source": [
-        "##  多角形\n",
+        "---\n",
+        "#  多角形\n",
         "* $n$ 角形の内角の和:\n",
         "$$180(n-2)^\\circ$$\n",
         "* $n$角形の対角線の本数:\n",
@@ -136,7 +128,8 @@
         "id": "FyUqoyT0IvPB"
       },
       "source": [
-        "##  円\n",
+        "---\n",
+        "#  円\n",
         "* 半径 $r$ の円の円周 $l$\n",
         "$$ l = 2r \\pi $$\n",
         "\n",
@@ -155,7 +148,8 @@
         "id": "odgtgHfHwaHT"
       },
       "source": [
-        "**方べきの定理**\n",
+        "---\n",
+        "# 方べきの定理\n",
         "\n",
         "点Pを通る2本の直線が円とそれぞれ2点 $A,b$ と2点 $C,D$ で交わっているとき \n",
         "$$PA \\cdot PB = PC \\cdot PD$$\n",
@@ -210,9 +204,8 @@
         "id": "s7q7x0q0we62"
       },
       "source": [
-        "##  三角形\n",
-        "\n",
-        "メネラウスの定理\n",
+        "---\n",
+        "# メネラウスの定理\n",
         "\n",
         "\n",
         "* 任意の直線 $l$ と三角形 $ABC$ において、直線 $l$ と $BC, CA, AB$ の交点をそれぞれ $D, E, F$ とする。この時、次の等式が成立する\n",
@@ -262,7 +255,8 @@
         "id": "3_Py_ZlQQndb"
       },
       "source": [
-        "**チェバの定理**\n",
+        "---\n",
+        "# チェバの定理\n",
         "\n",
         "* 三角形 $ABC$ において、任意の点 $O$ をとり、直線 $AO$ と $BC$、$BO$ と $CA$、$CO$ と $AB$ の交点をそれぞれ $D,E,F$ とする。この時、次の等式が成立する。なお、点 $O$ は、三角形の内部にあっても外部にあってもよい。\n",
         "\n",
@@ -316,7 +310,8 @@
         "id": "w5aHlHcGlOil"
       },
       "source": [
-        "##  立体図形\n",
+        "---\n",
+        "#  立体図形\n",
         "\n",
         "* 縦の長さ $a$ 、横の長さ $b$ 、高さ $h$  の直方体の対角線  $l$\n",
         "\n",
@@ -338,6 +333,7 @@
         "id": "dSG9BD0CUM5Z"
       },
       "source": [
+        "---\n",
         "#  図形と方程式\n",
         "\n",
         "* 中心座標 $\\displaystyle (a, b)$、半径 $r$ の円の方程式（標準形）\n",
@@ -377,9 +373,8 @@
         "id": "fWK4MWAvYRWP"
       },
       "source": [
-        "###  平面図形の面積\n",
-        "\n",
-        "**三角形**\n",
+        "---\n",
+        "# 三角形の面積\n",
         "\n",
         "* 底辺の長さ  $a$ 、高さ  $h$  の三角形の面積  $S$\n",
         "$$S = {1\\over 2}ah $$ \n",
@@ -414,7 +409,8 @@
         "id": "ZXMJOn-1IqRv"
       },
       "source": [
-        "**四角形**\n",
+        "---\n",
+        "# 四角形の面積\n",
         "\n",
         "* 縦の長さ  $a$ 、横の長さ  $b$  の長方形の面積  $S$\n",
         "$$\\displaystyle S = ab $$ \n",
@@ -435,13 +431,31 @@
         "$$S=\\sqrt{\\frac{(a+b+c-d)(a+b-c+d)(a-b+c+d)(-a+b+c+d)}{16}}$$ \n",
         "\n",
         "* また、 $$s = \\frac{a + b + c + d}{2} $$  とすると、 $$S = \\sqrt{(s - a)(s - b)(s - c)(s - d)} $$ \n",
-        "\n",
-        "**正多角形**\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OKXcrHJafR0L"
+      },
+      "source": [
+        "---\n",
+        "# 正多角形の面積\n",
         "\n",
         "* 一辺の長さ  $a$  の正 $n$ 角形の面積  $S$\n",
         "$$S = \\frac{n a^2}{4 \\tan{\\frac{\\pi}{n}} }$$ \n",
-        "\n",
-        "**円と扇形**\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "m9pFF52TfgUx"
+      },
+      "source": [
+        "---\n",
+        "# 円と扇形の面積\n",
         "\n",
         "* 半径  $r$ の円の面積  $S$\n",
         "$$S = \\pi r^2 $$ \n",
@@ -454,8 +468,7 @@
         "\n",
         "* 半径  $r$ 、弧の長さ $l$ の扇形の面積  $S$\n",
         "$$S = \\frac{1}{2} rl $$ \n",
-        "\n",
-        "&nbsp;\n"
+        "\n"
       ]
     },
     {
@@ -464,7 +477,8 @@
         "id": "0HvrJrjpHQRl"
       },
       "source": [
-        "###  立体図形の面積\n",
+        "---\n",
+        "#  立体図形の面積\n",
         "\n",
         "* 縦の長さ  $a$ 、横の長さ  $b$ 、高さ  $h$  の直方体の表面積  $S$\n",
         "$$S = 2(ab + bh + ah) $$ \n",
@@ -493,7 +507,8 @@
         "id": "WSzSgYksJwZh"
       },
       "source": [
-        "###  体積\n",
+        "---\n",
+        "#  体積\n",
         "\n",
         "* 縦の長さ  $a$ 、横の長さ  $b$ 、高さ  $h$  の直方体の体積  $V$\n",
         "$$ V = abh $$ \n",
@@ -555,7 +570,8 @@
         "id": "67eIx7nJKEAP"
       },
       "source": [
-        "##  ベクトル\n",
+        "---\n",
+        "#  ベクトル\n",
         "以下に挙げる公式で空間ベクトルで成り立つものは、その  $z$  成分を $0$  とした平面ベクトルでも成り立つ。\n",
         "\n",
         "*  $\\vec{a}$  と  $\\vec{b}$  の成す角が  $\\theta$  のとき\n",
@@ -587,44 +603,65 @@
         "id": "DISM-JNVMgzj"
       },
       "source": [
-        "#  初等代数\n",
-        "##  展開公式\n",
+        "---\n",
+        "#  展開公式\n",
         "\n",
-        "* 基本公式\n",
-        "*  $$(a+b)(c+d) = ac + ad + bc + bd$$ \n",
-        "*  $$(x+a)(x+b) = x^2 + (a+b)x + ab$$ \n",
-        "*  $$(ax+b)(cx+d) = acx^2 + (ad+bc)x + bd$$ \n",
+        "基本公式\n",
+        "*  $(a+b)(c+d) = ac + ad + bc + bd$ \n",
+        "*  $(x+a)(x+b) = x^2 + (a+b)x + ab$ \n",
+        "*  $(ax+b)(cx+d) = acx^2 + (ad+bc)x + bd$ \n",
         "\n",
-        "* 累乗\n",
-        "*  $$(a+b)^2 = a^2 + 2ab + b^2$$ \n",
-        "*  $$(a-b)^2 = a^2 - 2ab + b^2$$ \n",
-        "*  $$(a+b)^3 = a^3 + 3a^2b + 3ab^2 + b^3$$ \n",
-        "*  $$(a-b)^3 = a^3 - 3a^2b + 3ab^2 - b^3$$ \n",
-        "*  $$(a+b)^4 = a^4 + 4a^3b + 6a^2b^2 + 4ab^3 + b^4$$ \n",
-        "*  $$(a-b)^4 = a^4 - 4a^3b + 6a^2b^2 - 4ab^3 + b^4$$ \n",
-        "*  $$(a+b)^5 = a^5 + 5a^4b + 10a^3b^2 + 10a^2b^3 + 5ab^4 + b^5$$ \n",
-        "*  $$(a+b)^8 = a^8 + 8a^7b + 28a^6b^2 + 56a^5b^3 + 70a^4b^4 + 56a^3b^5 + 28a^2b^6 + 8ab^7 + b^8$$ \n",
-        "*  $$(a-b)^8 = a^8 - 8a^7b + 28a^6b^2 - 56a^5b^3 + 70a^4b^4 - 56a^3b^5 + 28a^2b^6 - 8ab^7 + b^8$$ \n",
-        "*  $$(a+b)^n = \\sum_{r = 0}^n{}_n{\\rm C}_{r} a^{n-r} b^r$$ \n",
+        "累乗\n",
+        "*  $(a+b)^2 = a^2 + 2ab + b^2$ \n",
+        "*  $(a-b)^2 = a^2 - 2ab + b^2$ \n",
+        "*  $(a+b)^3 = a^3 + 3a^2b + 3ab^2 + b^3$ \n",
+        "*  $(a-b)^3 = a^3 - 3a^2b + 3ab^2 - b^3$ \n",
+        "*  $(a+b)^4 = a^4 + 4a^3b + 6a^2b^2 + 4ab^3 + b^4$ \n",
+        "*  $(a-b)^4 = a^4 - 4a^3b + 6a^2b^2 - 4ab^3 + b^4$ \n",
+        "*  $(a+b)^5 = a^5 + 5a^4b + 10a^3b^2 + 10a^2b^3 + 5ab^4 + b^5$ \n",
+        "*  $(a+b)^8 = a^8 + 8a^7b + 28a^6b^2 + 56a^5b^3 + 70a^4b^4 + 56a^3b^5 + 28a^2b^6 + 8ab^7 + b^8$ \n",
+        "*  $(a-b)^8 = a^8 - 8a^7b + 28a^6b^2 - 56a^5b^3 + 70a^4b^4 - 56a^3b^5 + 28a^2b^6 - 8ab^7 + b^8$ \n",
+        "*  $(a+b)^n = \\sum_{r = 0}^n{}_n{\\rm C}_{r} a^{n-r} b^r$ \n",
         "\n",
-        "* 応用\n",
-        "*  $$(a+b)(a-b) = a^2 - b^2$$ \n",
-        "*  $$(a+b)(a^2 - ab + b^2) = a^3 + b^3$$ \n",
-        "*  $$(a-b)(a^2 + ab + b^2) = a^3 - b^3$$ \n",
-        "*  $$(a+b+c)^2 = a^2 + b^2 + c^2 + 2ab + 2bc + 2ca$$ \n",
-        "*  $$(a+b+c)^3 = a^3 + b^3 + c^3 + 3ab^2 + 3ac^2 + 3ba^2 + 3ca^2 + 6abc + 3bc^2 + 3cb^2$$ \n",
-        "*  $$(a+b+c)^4 = a^4 + b^4 + c^4 + 4ab^3 + 4ac^3 + 4ba^3 + 4ca^3 + 4bc^3 + 4cb^3 + 6a^2b^2 + 6a^2c^2 + 6b^2c^2 + 12a^2bc + 12ab^2c + 12abc^2$$ \n",
-        "*  $$(a+b+c)^n$$ の展開式の一般項(多項定理)\n",
-        "$$ \\frac{n!}{p! q! r!} a^p b^q c^r $$  (ただし、$n$=''p'' + ''q'' +  $r$)\n",
-        "*  $$(a+b+c+d)^2 = a^2 + b^2 + c^2 + d^2 + 2ab + 2ac + 2ad + 2bc + 2bd + 2cd$$ \n",
-        "*  $$(a+b+c+d)^3 = a^3 + b^3 + c^3 + d^3 + 3ab^2 + 3ac^2 + 3ad^2 + 3ba^2+ 3ca^2 + 3da^2 + 6abc + 6abd + 6acd + 3ac^2 + 3cb^2 + 3db^2 + 6bcd + 3cd^2+3dc^2$$ \n",
-        "*  $$(a+b+c)(a^2 + b^2 + c^2 - ab - bc - ca) = {1\\over 2}(a+b+c)((a - b)^2 + (b - c)^2 +(c - a)^2)= a^3 + b^3 + c^3 -3abc\n",
-        "$$ \n",
-        "* $$ (x+a)(x+b)(x+c) = x^3 + (a+b+c)x^2 + (ab + bc + ca)x +abc$$ \n",
-        "*  $$(ab+c)(bc+a)(ca+b) = (cab)^2 + cab^3 + bca^3 + (ab)^2 + abc^3 + (bc)^2 + (ac)^2 + abc$$ \n",
-        "*  $$(a-b)(a^{n-1} + a^{n-2}b + a^{n-3}b^2 + \\cdots + b^{n-1}) = a^n - b^n\n",
-        "$$ \n",
-        "*  $$\\sum_{r = 0}^n{}_n{\\rm C}_{r} = 2^n$$ \n",
+        "応用\n",
+        "*  $(a+b)(a-b) = a^2 - b^2$ \n",
+        "*  $(a+b)(a^2 - ab + b^2) = a^3 + b^3$ \n",
+        "*  $(a-b)(a^2 + ab + b^2) = a^3 - b^3$ \n",
+        "*  $(a+b+c)^2 = a^2 + b^2 + c^2 + 2ab + 2bc + 2ca$ \n",
+        "*  $(a+b+c)^3 = a^3 + b^3 + c^3 + 3ab^2 + 3ac^2 + 3ba^2 + 3ca^2 + 6abc + 3bc^2 + 3cb^2$ \n",
+        "*  $(a+b+c)^4 = a^4 + b^4 + c^4 + 4ab^3 + 4ac^3 + 4ba^3 + 4ca^3 + 4bc^3 + 4cb^3 + 6a^2b^2 + 6a^2c^2 + 6b^2c^2 + 12a^2bc + 12ab^2c + 12abc^2$ \n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q8RW1pOQgdWE"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "b1ImUkLZgEPI"
+      },
+      "source": [
+        "---\n",
+        "# 多項定理\n",
+        "\n",
+        "$(a+b+c)^n$ の展開式の一般項(多項定理)\n",
+        "* $ \\frac{n!}{p! q! r!} a^p b^q c^r $  (ただし、$n$=''p'' + ''q'' +  $r$)\n",
+        "*  $(a+b+c+d)^2 = a^2 + b^2 + c^2 + d^2 + 2ab + 2ac + 2ad + 2bc + 2bd + 2cd$ \n",
+        "*  $(a+b+c+d)^3 = a^3 + b^3 + c^3 + d^3 + 3ab^2 + 3ac^2 + 3ad^2 + 3ba^2+ 3ca^2 + 3da^2 + 6abc + 6abd + 6acd + 3ac^2 + 3cb^2 + 3db^2 + 6bcd + 3cd^2+3dc^2$ \n",
+        "*  $(a+b+c)(a^2 + b^2 + c^2 - ab - bc - ca) = {1\\over 2}(a+b+c)((a - b)^2 + (b - c)^2 +(c - a)^2)= a^3 + b^3 + c^3 -3abc\n",
+        "$ \n",
+        "* $ (x+a)(x+b)(x+c) = x^3 + (a+b+c)x^2 + (ab + bc + ca)x +abc$ \n",
+        "*  $(ab+c)(bc+a)(ca+b) = (cab)^2 + cab^3 + bca^3 + (ab)^2 + abc^3 + (bc)^2 + (ac)^2 + abc$ \n",
+        "*  $(a-b)(a^{n-1} + a^{n-2}b + a^{n-3}b^2 + \\cdots + b^{n-1}) = a^n - b^n\n",
+        "$ \n",
+        "*  $\\sum_{r = 0}^n{}_n{\\rm C}_{r} = 2^n$ \n",
         "\n"
       ]
     },
