Colaboratory を使用して作成しました

--- a/mathformula.ipynb
+++ b/mathformula.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "mathformula.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOL1Z/DtrAlLgW851uArHjL",
+      "authorship_tag": "ABX9TyNwq/LyXv59AlmPsKqUYeDf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -738,7 +738,7 @@
         "\n",
         "$$x = \\frac{-b \\pm \\sqrt{b^2 - 4ac}}{2a}$$ \n",
         "\n",
-        "* $ax^2 + 2bx + c =0$ の場合：\n",
+        "* $ax^2 + 2bx + c =0$ の場合\n",
         "$$x = \\frac{-b \\pm \\sqrt{b^2 - ac}}{a}$$ \n",
         "\n",
         "* $x^2 + bx + c = 0$ の場合\n",
@@ -746,25 +746,29 @@
         "\n",
         "&nbsp;\n",
         "\n",
-        "*2次方程式  $ax^2 + bx + c = 0$ の2つの解を $\\alpha , \\beta$ とすると\n",
+        "* 2次方程式  $ax^2 + bx + c = 0$ の2つの解を $\\alpha , \\beta$ とすると\n",
         "$$ax^2 + bx + c = a(x-\\alpha)(x-\\beta)$$ \n",
         "であり、この $\\alpha , \\beta$ は次の関係式を満たす。（解と係数の関係）\n",
-        "* $\\alpha + \\beta =-\\frac{b}{a}$ \n",
-        "* $\\alpha\\beta =\\frac{c}{a}$  \n",
+        "$$\\alpha + \\beta =-\\frac{b}{a}$$\n",
+        "$$\\alpha\\beta =\\frac{c}{a}$$\n",
         "\n",
-        "* $$x^2 + bx + c = 0$$  ( $$ax^2 + bx +c = 0$$  において  $$a = 1$$ ) の2つの解を $$\\alpha , \\beta$$ とすると：\n",
+        "* $x^2 + bx + c = 0$ ($ax^2 + bx +c = 0$  において  $a = 1$) の2つの解を $\\alpha , \\beta$ とすると\n",
         "$$x^2 + bx + c = (x - \\alpha)(x - \\beta) = x^2 - (\\alpha + \\beta)x + \\alpha \\beta$$ \n",
-        "**:であり、この $$\\alpha , \\beta$$ は次の関係式を満たす。(解と係数の関係)\n",
-        "**:零点の和 :  $$\\alpha + \\beta = -b$$ \n",
-        "**:零点の積 :  $$\\alpha \\beta = c$$ \n",
+        "であり、この $\\alpha , \\beta$ は次の関係式を満たす。(解と係数の関係)\n",
+        "\n",
+        "$\\qquad$ 零点の和 :  $\\alpha + \\beta = -b$\n",
+        "\n",
+        "$\\qquad$ 零点の積 :  $\\alpha \\beta = c$\n",
         "\n",
         "\n",
-        "*3次方程式  $$ax^3 + bx^2 + cx + d = 0$$ の3つの解を $$\\alpha , \\beta , \\gamma$$ とすると：\n",
+        "* 3 次方程式  \n",
+        "$$ax^3 + bx^2 + cx + d = 0$$\n",
+        "の3つの解を $\\alpha , \\beta , \\gamma$ とすると\n",
         "$$ax^3 + bx^2 + cx + d = a(x-\\alpha)(x-\\beta)(x-\\gamma)$$ \n",
-        "*:であり、この $$\\alpha , \\beta, \\gamma$$ は次の関係式を満たす。（解と係数の関係）\n",
-        "*:: $$\\alpha + \\beta  + \\gamma =-\\frac{b}{a}$$ \n",
-        "*:: $$\\alpha\\beta + \\beta\\gamma  + \\gamma\\alpha  =\\frac{c}{a}$$ \n",
-        "*:: $$\\alpha\\beta\\gamma  =-\\frac{d}{a}$$ \n",
+        "であり、この $\\alpha , \\beta, \\gamma$ は次の関係式を満たす。（解と係数の関係）\n",
+        "$$\\alpha + \\beta  + \\gamma =-\\frac{b}{a}$$ \n",
+        "$$\\alpha\\beta + \\beta\\gamma  + \\gamma\\alpha  =\\frac{c}{a}$$ \n",
+        "$$\\alpha\\beta\\gamma  =-\\frac{d}{a}$$ \n",
         "\n"
       ]
     },
@@ -804,30 +808,75 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "SWKCGOpjlmq0"
       },
       "source": [
-        "###  分数\n",
-        "*  $$\\frac{1}{(x+a)(x+b)} = \\frac{1}{b-a}\\left(\\frac{1}{x+a}-\\frac{1}{x+b}\\right) $$  $$(a\\not=b) $$ \n",
+        "---\n",
+        "#  分数の性質\n",
+        "\n",
+        "*  $$\\frac{1}{(x+a)(x+b)} = \\frac{1}{b-a}\\left(\\frac{1}{x+a}-\\frac{1}{x+b}\\right) \\qquad (a\\not=b) $$ \n",
         "*  $$\\frac{1}{k(k+1)} = \\frac{1}{k}-\\frac{1}{k+1} $$ \n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BBJ15STpNlfx"
+      },
+      "source": [
+        "---\n",
+        "#  複素数\n",
         "\n",
-        "###  複素数\n",
-        "*  $$\\displaystyle e^{i\\theta}=\\cos \\theta + i \\sin \\theta $$ 　（オイラーの式）\n",
-        "*  $$\\displaystyle e^{\\pi i} = -1 $$ \n",
-        "* 複素数のべき乗：（ド・モアブルの定理）\n",
-        "$$(\\cos \\theta + i \\sin \\theta)^n = \\cos ( n \\theta) + i \\sin (n \\theta)$$ \n",
+        "* オイラーの公式 Euler's formula 指数関数と三角関数の関係式\n",
+        "$$\\displaystyle e^{i\\theta}=\\cos \\theta + i \\sin \\theta $$ \n",
         "\n",
+        "* オイラーの等式 Euler's identity\n",
+        "$$\\displaystyle e^{\\pi i} = -1 $$ \n",
+        "\n",
+        "* 複素数のべき乗 ド・モアブルの定理\n",
+        "$$(\\cos \\theta + i \\sin \\theta)^n = \\cos ( n \\theta) + i \\sin (n \\theta)$$ \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "P37NFrBdOdoI"
+      },
+      "source": [
+        "---\n",
         "##  行列\n",
-        "$E$を2次単位行列、 $O$ を2×2の零行列とすると、任意の2次正方行列  $$A =\n",
+        "$E$を2次単位行列、 $O$ を $2 \\times 2$ の零行列とすると、任意の2次正方行列\n",
+        "$$A =\n",
         "\\begin{pmatrix}\n",
         " a & b\\\\\n",
         " c & d\\\\\n",
         "\\end{pmatrix}\n",
         "$$  について\n",
-        "* $$A^2 - (a + d)A + (ad - bc)E = \\mathbf{O}$$ 　（ケイリー・ハミルトンの定理）\n",
         "\n",
+        "ケイリー・ハミルトンの定理\n",
+        "\n",
+        "$$A^2 - (a + d)A + (ad - bc)E = \\mathbf{O}$$\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CoJkUledP_93"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2J40Za4APWjh"
+      },
+      "source": [
+        "---\n",
         "#  集合\n",
         "*演算規則\n",
         "**交換法則\n",
@@ -843,7 +892,17 @@
         ": $$\\overline{A \\cap B}=\\overline{A} \\cup \\overline{B}$$ \n",
         ": $$\\overline{A \\cup B}=\\overline{A} \\cap \\overline{B}$$ \n",
         "*集合の要素の個数\n",
-        ": $$n(A \\cup B \\cup C)=n(A) + n(B) + n(C) - n(A \\cap B) - n(B \\cap C) - n(C \\cap A) + n(A \\cap B \\cap C)$$ \n",
+        ": $$n(A \\cup B \\cup C)=n(A) + n(B) + n(C) - n(A \\cap B) - n(B \\cap C) - n(C \\cap A) + n(A \\cap B \\cap C)$$ \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KcEiTpCQPzfx"
+      },
+      "source": [
+        "\n",
+        "---\n",
         "#  初等関数の性質\n",
         "*  $x$ を $a$ から $b$ まで変化させたときの関数 $$f(x)$$ の変化の割合（平均変化率）\n",
         "$$\\frac{f(b)-f(a)}{b-a} $$ \n",
