Colaboratory を使用して作成しました

--- a/mathformula.ipynb
+++ b/mathformula.ipynb
@@ -6,7 +6,7 @@
       "name": "mathformula.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNO8bTN5+4F26zqE8PIs3Ms",
+      "authorship_tag": "ABX9TyO4I/6jwZBOysFXUdesa1US",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -358,15 +358,6 @@
         "* 2次関数 ( $y=ax^2$ ) 上の3点 $A(x_a,y_a),\\; B(x_b,y_b),\\; C(x_c,y_c)$ を結んで出来る三角形 $ABC$ の面積 $S$\n",
         "$x_a - x_b = l,\\;\\; x_b - x_c = m,\\;\\; x_c - x_a = n$ とすると、\n",
         "$$S = \\frac{|almn|}{2}$$ \n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "TWStzA84WkZd"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -850,7 +841,7 @@
       },
       "source": [
         "---\n",
-        "##  行列\n",
+        "#  行列\n",
         "$E$を2次単位行列、 $O$ を $2 \\times 2$ の零行列とすると、任意の2次正方行列\n",
         "$$A =\n",
         "\\begin{pmatrix}\n",
@@ -885,14 +876,13 @@
         "演算規則\n",
         "* 交換法則 $\\qquad A \\cap B=B \\cap A, \\quad A \\cup B=B \\cup A$\n",
         "* 結合法則 $\\qquad A \\cap B \\cap C=(A \\cap B) \\cap C=A \\cap (B \\cap C), \\quad A \\cup B \\cup C=(A \\cup B) \\cup C=A \\cup (B \\cup C)$\n",
-        "**分配法則\n",
-        ": $$A \\cap (B \\cup C)=(A \\cap B) \\cup (A \\cap C)$$ \n",
-        ": $$A \\cup (B \\cap C)=(A \\cup B) \\cap (A \\cup C)$$ \n",
-        "*ド・モルガンの法則\n",
-        ": $$\\overline{A \\cap B}=\\overline{A} \\cup \\overline{B}$$ \n",
-        ": $$\\overline{A \\cup B}=\\overline{A} \\cap \\overline{B}$$ \n",
-        "*集合の要素の個数\n",
-        ": $$n(A \\cup B \\cup C)=n(A) + n(B) + n(C) - n(A \\cap B) - n(B \\cap C) - n(C \\cap A) + n(A \\cap B \\cap C)$$ \n"
+        "* 分配法則 $\\qquad A \\cap (B \\cup C)=(A \\cap B) \\cup (A \\cap C),\\quad A \\cup (B \\cap C)=(A \\cup B) \\cap (A \\cup C)$\n",
+        "\n",
+        "cf. commutative law, associative law, distributive law\n",
+        "\n",
+        "* ド・モルガンの法則 $\\qquad \\overline{A \\cap B}=\\overline{A} \\cup \\overline{B},\\quad \\overline{A \\cup B}=\\overline{A} \\cap \\overline{B}$\n",
+        "* 集合の要素の個数\n",
+        "$$n(A \\cup B \\cup C)=n(A) + n(B) + n(C) - n(A \\cap B) - n(B \\cap C) - n(C \\cap A) + n(A \\cap B \\cap C)$$ \n"
       ]
     },
     {
