Colaboratory を使用して作成しました

--- a/mathformula.ipynb
+++ b/mathformula.ipynb
@@ -6,7 +6,7 @@
       "name": "mathformula.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO4I/6jwZBOysFXUdesa1US",
+      "authorship_tag": "ABX9TyNMtqO+uA7wKgEtKZLN/Ws9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -709,15 +709,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CnSH27BVFAoA"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "g7BzLwX4Djqv"
       },
       "source": [
@@ -808,10 +799,10 @@
       },
       "source": [
         "---\n",
-        "#  分数の性質\n",
+        "#  分数\n",
         "\n",
-        "*  $$\\frac{1}{(x+a)(x+b)} = \\frac{1}{b-a}\\left(\\frac{1}{x+a}-\\frac{1}{x+b}\\right) \\qquad (a\\not=b) $$ \n",
-        "*  $$\\frac{1}{k(k+1)} = \\frac{1}{k}-\\frac{1}{k+1} $$ \n",
+        "* $\\displaystyle \\frac{1}{(x+a)(x+b)} = \\frac{1}{b-a}\\left(\\frac{1}{x+a}-\\frac{1}{x+b}\\right) \\qquad (a\\not=b) $\n",
+        "* $\\displaystyle \\frac{1}{k(k+1)} = \\frac{1}{k}-\\frac{1}{k+1} $\n",
         "\n"
       ]
     },
@@ -858,15 +849,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CoJkUledP_93"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "2J40Za4APWjh"
       },
       "source": [
@@ -886,96 +868,179 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "KcEiTpCQPzfx"
       },
       "source": [
-        "\n",
         "---\n",
         "#  初等関数の性質\n",
-        "*  $x$ を $a$ から $b$ まで変化させたときの関数 $$f(x)$$ の変化の割合（平均変化率）\n",
-        "$$\\frac{f(b)-f(a)}{b-a} $$ \n",
         "\n",
-        "##  一次関数\n",
-        "* 2点  $$(a_1, b_1)$$ ,  $$(a_2, b_2)$$  を通る直線の式：\n",
+        "$x$ を $a$ から $b$ まで変化させたときの関数 $f(x)$ の変化の割合（平均変化率）\n",
+        "\n",
+        "$$\\frac{f(b)-f(a)}{b-a} $$ \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yMeaoeJDehMB"
+      },
+      "source": [
+        "---\n",
+        "#  一次関数\n",
+        "* 2点  $(a_1, b_1), (a_2, b_2)$  を通る直線の式\n",
+        "\n",
         "$$y=\\frac{b_2-b_1}{a_2-a_1}(x-a_1)+b_1 $$ \n",
-        "* 2点  $$x$$ 切片 $$(a, 0)$$ ,  $$y$$ 切片 $$(0, b)$$ （但し、ab≠0とする）を通る直線の式：\n",
+        "\n",
+        "* 2点  $x$ 切片 $(a, 0)$, $y$ 切片 $(0, b)$ （ただし、ab≠0とする）を通る直線の式\n",
+        "\n",
         "$$\\frac{x}{a}+\\frac{y}{b}=1 $$ \n",
-        "* 点  $$(x_0, y_0)$$  を通り、傾き  $$c$$  の直線の式：\n",
+        "\n",
+        "* 点  $(x_0, y_0)$  を通り、傾き  $c$  の直線の式\n",
+        "\n",
         "$$y-y_0=c(x-x_0) $$ \n",
-        "* 傾き  $$c$$  を方向ベクトル $$(a, b)$$ と捉えると：\n",
-        "$$\\frac{x-x_0}a=\\frac{y-y_0}b $$ \n",
         "\n",
-        "###  接線の方程式\n",
-        "* 関数 $$f(x)$$ のグラフ上の点 $$(x_1, y_1)$$ における接線\n",
+        "* 傾き  $c$  を方向ベクトル $(a, b)$ と捉えると\n",
+        "\n",
+        "$$\\frac{x-x_0}a=\\frac{y-y_0}b $$ \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LUsscIVces_G"
+      },
+      "source": [
+        "---\n",
+        "#  接線の方程式\n",
+        "* 関数 $f(x)$ のグラフ上の点 $(x_1, y_1)$ における接線\n",
+        "\n",
         "$$y - y_1=f^\\prime(x)(x - x_1) $$ \n",
-        "* 楕円 $$\\frac{x^{2}}{a^{2}} + \\frac{y^{2}}{b^{2}} = 1$$ 上の点 $$(x_1, y_1)$$ における接線\n",
+        "\n",
+        "* 楕円 $$\\frac{x^{2}}{a^{2}} + \\frac{y^{2}}{b^{2}} = 1$$ 上の点 $(x_1, y_1)$ における接線\n",
+        "\n",
         "$$\\frac{x_{1}x}{a^{2}} + \\frac{y_{1}y}{b^{2}} = 1$$ \n",
-        "* 双曲線 $$\\frac{x^{2}}{a^{2}} - \\frac{y^{2}}{b^{2}} = 1$$ 上の点 $$(x_1, y_1)$$ における接線\n",
+        "\n",
+        "* 双曲線 $$\\frac{x^{2}}{a^{2}} - \\frac{y^{2}}{b^{2}} = 1$$ 上の点 $(x_1, y_1)$ における接線\n",
+        "\n",
         "$$\\frac{x_{1}x}{a^{2}} - \\frac{y_{1}y}{b^{2}} = 1$$ \n",
-        "* 放物線 $$y^2 = 4px$$ 上の点 $$(x_1, y_1)$$ における接線\n",
-        "$$y_1y = 2p(x + x_1)$$ \n",
         "\n",
-        "##  二次関数\n",
-        "* 点  $$(p, q)$$  を頂点とし，2次の項の係数が  $$a$$  である二次関数の式：\n",
+        "* 放物線 $$y^2 = 4px$$ 上の点 $(x_1, y_1)$ における接線\n",
+        "\n",
+        "$$y_1y = 2p(x + x_1)$$ \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BoA5DxzPfRkt"
+      },
+      "source": [
+        "---\n",
+        "#  二次関数\n",
+        "* 点  $(p, q)$  を頂点とし，2次の項の係数が  $a$  である二次関数の式\n",
         "$$y=a(x-p)^2+q$$ \n",
-        "* 点  $$(p, q)$$  を頂点とし，点  $$(a, b)$$  を通る二次関数の式：\n",
-        "$$y=\\frac{b-q}{(a-p)^2}(x-p)^2+q$$ \n",
-        "* 2点  $$(a_1, b_1)$$ ,  $$(a_2, b_2)$$  を通り，2階微分の係数が  $$c$$  である二次関数の式：\n",
-        "$$y=c(x-a_1)(x-a_2)+\\frac{b_2-b_1}{a_2-a_1}(x-a_1)+b_1$$ \n",
-        "* 3点  $$(a_1, b_1)$$ ,  $$(a_2, b_2)$$ ,  $$(a_3, b_3)$$  を通る二次関数の式：\n",
-        "$$y=b_1\\frac{(x-a_2)(x-a_3)}{(a_1-a_2)(a_1-a_3)}+b_2\\frac{(x-a_3)(x-a_1)}{(a_2-a_3)(a_2-a_1)}+b_3\\frac{(x-a_1)(x-a_2)}{(a_3-a_1)(a_3-a_2)}$$ \n",
         "\n",
-        "##  関数のグラフの移動\n",
-        "###  平行移動\n",
-        "*  $$y=f(x)$$ の表すグラフを  $x$ 軸方向に $a$ 、 $y$軸方向に $b$ 移動したときのグラフを表す式：\n",
+        "* 点  $(p, q)$  を頂点とし，点  $(a, b)$  を通る二次関数の式\n",
+        "\n",
+        "$$y=\\frac{b-q}{(a-p)^2}(x-p)^2+q$$ \n",
+        "\n",
+        "* 2点  $(a_1, b_1),  (a_2, b_2)$  を通り，2 階微分の係数が  $c$  である二次関数の式\n",
+        "\n",
+        "$$y=c(x-a_1)(x-a_2)+\\frac{b_2-b_1}{a_2-a_1}(x-a_1)+b_1$$ \n",
+        "\n",
+        "* 3 点  $(a_1, b_1), (a_2, b_2), (a_3, b_3)$  を通る二次関数の式\n",
+        "\n",
+        "$$y=b_1\\frac{(x-a_2)(x-a_3)}{(a_1-a_2)(a_1-a_3)}+b_2\\frac{(x-a_3)(x-a_1)}{(a_2-a_3)(a_2-a_1)}+b_3\\frac{(x-a_1)(x-a_2)}{(a_3-a_1)(a_3-a_2)}$$ \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f-hylZKAfx3H"
+      },
+      "source": [
+        "---\n",
+        "#  関数のグラフの移動\n",
+        "平行移動\n",
+        "*  $y=f(x)$ の表すグラフを  $x$ 軸方向に $a$ 、 $y$軸方向に $b$ 移動したときのグラフを表す式\n",
         "$$ y-b = f(x-a)$$ \n",
         "\n",
-        "###  対称移動\n",
-        "*  $$y=f(x)$$ の表すグラフを  $x$ 軸に関して対称移動したときのグラフを表す式：\n",
+        "対称移動\n",
+        "*  $y=f(x)$ の表すグラフを  $x$ 軸に関して対称移動したときのグラフを表す式\n",
         "$$ y = -f(x)$$ \n",
-        "*  $$y=f(x)$$ の表すグラフを $y$軸に関して対称移動したときのグラフを表す式：\n",
+        "\n",
+        "*  $y=f(x)$ の表すグラフを $y$軸に関して対称移動したときのグラフを表す式\n",
         "$$ y = f(-x)$$ \n",
-        "*  $$y=f(x)$$ の表すグラフを原点に関して対称移動したときのグラフを表す式：\n",
+        "\n",
+        "*  $y=f(x)$ の表すグラフを原点に関して対称移動したときのグラフを表す式\n",
         "$$ y = -f(-x)$$ \n",
-        "*  $$y=f(x)$$ の表すグラフを $$ y= x$$  に関して対称移動したときのグラフを表す式：\n",
+        "\n",
+        "*  $y=f(x)$ の表すグラフを $ y= x$  に関して対称移動したときのグラフを表す式\n",
         "$$ x = f(y)$$ \n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mjvfHU-QgaI9"
+      },
+      "source": [
+        "---\n",
+        "# 三角関数\n",
+        "基本公式\n",
+        "* $\\displaystyle \\sin\\left(\\frac{\\pi}{2} + \\theta\\right) = \\cos\\theta$ \n",
+        "* $\\displaystyle \\cos\\left(\\frac{\\pi}{2} + \\theta\\right) = -\\sin\\theta$ \n",
+        "* $\\displaystyle \\tan\\left(\\frac{\\pi}{2} + \\theta\\right) = -\\frac{1}{\\tan\\theta}$ \n",
+        "* $\\displaystyle \\sin(\\pi+\\theta) = -\\sin\\theta$ \n",
+        "* $\\displaystyle \\cos(\\pi + \\theta) = -\\cos\\theta$ \n",
+        "* $\\displaystyle \\tan(\\pi + \\theta) = \\tan\\theta$ \n",
         "\n",
-        "##  三角関数\n",
-        "###  基本公式\n",
-        "$$\\sin\\left(\\frac{\\pi}{2} + \\theta\\right) = \\cos\\theta$$ \n",
-        "$$\\cos\\left(\\frac{\\pi}{2} + \\theta\\right) = -\\sin\\theta$$ \n",
-        "$$\\tan\\left(\\frac{\\pi}{2} + \\theta\\right) = -\\frac{1}{\\tan\\theta}$$ \n",
-        "$$\\sin(\\pi+\\theta) = -\\sin\\theta$$ \n",
-        "$$\\cos(\\pi + \\theta) = -\\cos\\theta$$ \n",
-        "$$\\tan(\\pi + \\theta) = \\tan\\theta$$ \n",
+        "三角比の相互関係\n",
+        "* $\\displaystyle \\sin^2\\theta + \\cos^2\\theta = 1$ (ピタゴラスの基本三角公式)\n",
+        "* $\\displaystyle \\tan\\theta = \\frac{\\sin\\theta}{\\cos\\theta}$ \n",
+        "* $\\displaystyle 1 + \\tan^2\\theta = \\frac{1}{\\cos^2\\theta}$ \n",
+        "* $\\displaystyle 1 + \\frac{1}{\\tan^2\\theta} = \\frac{1}{\\sin^2\\theta}$ \n",
         "\n",
-        "*三角比の相互関係\n",
-        "$$\\sin^2\\theta + \\cos^2\\theta = 1$$ (ピタゴラスの基本三角公式)\n",
-        "$$\\tan\\theta = \\frac{\\sin\\theta}{\\cos\\theta}$$ \n",
-        "$$1 + \\tan^2\\theta = \\frac{1}{\\cos^2\\theta}$$ \n",
-        "$$1 + \\frac{1}{\\tan^2\\theta} = \\frac{1}{\\sin^2\\theta}$$ \n",
+        "補角の公式 (還元公式)\n",
+        "* $\\displaystyle \\sin(\\pi-\\theta) = \\sin\\theta$\n",
+        "* $\\displaystyle \\cos(\\pi - \\theta) = -\\cos\\theta$\n",
+        "* $\\displaystyle \\tan(\\pi - \\theta) = -\\tan\\theta$\n",
         "\n",
-        "====補角の公式(還元公式)====\n",
-        "$$\\sin(\\pi-\\theta) = \\sin\\theta$$ \n",
-        "$$\\cos(\\pi - \\theta) = -\\cos\\theta$$ \n",
-        "$$\\tan(\\pi - \\theta) = -\\tan\\theta$$ \n",
+        "余角の公式(還元公式)\n",
+        "* $\\displaystyle \\sin\\left(\\frac{\\pi}{2} - \\theta\\right) = \\cos\\theta$ \n",
+        "* $\\displaystyle \\cos\\left(\\frac{\\pi}{2} - \\theta\\right) = \\sin\\theta$ \n",
+        "* $\\displaystyle \\tan\\left(\\frac{\\pi}{2} - \\theta\\right) = \\frac{1}{\\tan\\theta}$ \n",
         "\n",
-        "====余角の公式(還元公式)====\n",
-        "$$\\sin\\left(\\frac{\\pi}{2} - \\theta\\right) = \\cos\\theta$$ \n",
-        "$$\\cos\\left(\\frac{\\pi}{2} - \\theta\\right) = \\sin\\theta$$ \n",
-        "$$\\tan\\left(\\frac{\\pi}{2} - \\theta\\right) = \\frac{1}{\\tan\\theta}$$ \n",
-        "\n",
-        "====負角の公式(還元公式)====\n",
-        "$$\\sin(-\\theta) = -\\sin\\theta$$ \n",
-        "$$\\cos(-\\theta) = \\cos\\theta$$ \n",
-        "$$\\tan(- \\theta) = -\\tan\\theta$$ \n",
-        "\n",
-        "###  加法定理\n",
+        "負角の公式(還元公式)\n",
+        "* $\\sin(-\\theta) = -\\sin\\theta$\n",
+        "* $\\cos(-\\theta) = \\cos\\theta$\n",
+        "* $\\tan(- \\theta) = -\\tan\\theta$\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "O34Mkf6ajS_M"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wxl1V_gOi3AN"
+      },
+      "source": [
+        "---\n",
+        "#  加法定理\n",
         "*  $$\\displaystyle \\sin(\\alpha \\pm \\beta) = \\sin\\alpha \\cos\\beta \\pm \\cos\\alpha \\sin\\beta $$ \n",
         "*  $$\\cos(\\alpha \\pm \\beta) = \\cos\\alpha \\cos\\beta \\mp \\sin\\alpha \\sin\\beta $$ \n",
         "*  $$\\tan(\\alpha \\pm \\beta) =  \\frac{\\tan\\alpha \\pm \\tan\\beta}{1 \\mp \\tan\\alpha \\tan\\beta} $$ \n",
+        "\n",
         "（すべて複号同順）\n",
         "\n",
         "###  二倍角の公式\n",
@@ -1001,7 +1066,15 @@
         "*  $$\\sin \\alpha \\cdot \\sin \\beta =-\\frac{1}{2}\\left\\{\\cos(\\alpha + \\beta)-\\cos(\\alpha - \\beta)\\right\\}$$ \n",
         "\n",
         "###  三角関数の合成\n",
-        "*  $$a\\sin \\theta + b\\cos \\theta =\\sqrt{a^2 + b^2}\\sin(\\theta + \\alpha)$$ ただし、 $$\\sin \\alpha = \\frac{b}{\\sqrt{a^2 + b^2}}, \\cos \\alpha = \\frac{a}{\\sqrt{a^2 + b^2}}$$ \n",
+        "*  $$a\\sin \\theta + b\\cos \\theta =\\sqrt{a^2 + b^2}\\sin(\\theta + \\alpha)$$ ただし、 $$\\sin \\alpha = \\frac{b}{\\sqrt{a^2 + b^2}}, \\cos \\alpha = \\frac{a}{\\sqrt{a^2 + b^2}}$$ \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j135KEgOhMCX"
+      },
+      "source": [
         "\n",
         "##  指数関数・対数関数\n",
         "以下、この節内では  $a$ ,  $b$  , $c$  は実数とする。\n",
