Colaboratory を使用して作成しました

--- a/math_discrete_ogurahisakazu.ipynb
+++ b/math_discrete_ogurahisakazu.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete_ogurahisakazu.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNUEeQ7D8q5lBqdeE/RJTZ1",
+      "authorship_tag": "ABX9TyMtt0TD7LDFchYrdxwAgE9u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -340,15 +340,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "NgSshufVV_Xq"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "zbiq8-xC_9FU"
       },
       "source": [
@@ -402,7 +393,7 @@
         "display(latex(expr))\n",
         "display(latex(factor(expr)))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -615,7 +606,7 @@
       },
       "source": [
         "---\n",
-        "問題 $\\qquad$ 無理数の稠密性 ちゅうみつせい を証明せよ\n",
+        "問題 $\\qquad$ 無理数の稠密性 ちゅうみつせい を証明せよ。\n",
         "\n",
         "\n"
       ]
@@ -626,7 +617,31 @@
         "id": "rSdgax1eMyaT"
       },
       "source": [
+        "---\n",
+        "番号付けできる集合を可付番集合 enumerable set あるいは可算集合 countable set と言う。\n",
+        "\n",
+        "自然数の集合 $\\boldsymbol N$ は可算集合である。\n",
+        "\n",
+        "有理数は可算集合であるが、稠密 dense である。 なので離散集合ではない。\n",
+        "\n",
+        "離散集合は有限集合であるか、互いに離れた要素からなる可算集合である。\n",
+        "\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GYTCRuHBj04b"
+      },
+      "source": [
+        "# 集合演算\n",
+        "\n",
+        "部分集合 subset\n",
+        "\n",
+        "$A \\subset B$\n",
+        "\n",
+        "$A \\subset B \\overset{\\text{def}}{\\Longleftrightarrow}$ $[x \\in A \\implies x \\in B]$"
       ]
     }
   ]
