Colaboratory を使用して作成しました

--- a/math_discrete_ogurahisakazu.ipynb
+++ b/math_discrete_ogurahisakazu.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete_ogurahisakazu.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMtt0TD7LDFchYrdxwAgE9u",
+      "authorship_tag": "ABX9TyNl+z2ZKK6Q0GvQ8oxXia/C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -639,9 +639,24 @@
         "\n",
         "部分集合 subset\n",
         "\n",
-        "$A \\subset B$\n",
+        "集合 $A$ が $B$ の部分集合であるということは、集合 $A$ の任意の元が $B$ の要素である。\n",
         "\n",
-        "$A \\subset B \\overset{\\text{def}}{\\Longleftrightarrow}$ $[x \\in A \\implies x \\in B]$"
+        "$A \\subset B \\iff [x \\in A \\implies x \\in B]$\n",
+        "\n",
+        "集合 $A$ と $B$ が互いに部分集合となっているとき $A$ と $B$ は等しい。\n",
+        "\n",
+        "$A = B \\iff [A \\subset B \\land B \\subset A]$\n",
+        "\n",
+        "$A \\subset B \\land A \\neq B$ のとき $A$ は $B$ の部分集合である。\n",
+        "\n",
+        "定義より\n",
+        "* $P \\subset P$\n",
+        "* $\\phi \\subset P$\n",
+        "\n",
+        "集合の包含関係の性質\n",
+        "\n",
+        "* 反射性 $\\quad$ $A \\subset A$\n",
+        "* 反\n"
       ]
     }
   ]
