--- a/math_discrete_ishimurasonoko.ipynb
+++ b/math_discrete_ishimurasonoko.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete_ishimurasonoko.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPzcVrHovCdod+OvbIegRLa",
+      "authorship_tag": "ABX9TyP7tmxBrhRMo2gPFlVsOH00",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -260,6 +260,7 @@
         "outputId": "5e346326-3d5c-45c6-ce90-30b7fce8986c"
       },
       "source": [
+        "# べき集合のことを power set と言うらしい\n",
         "from itertools import *\n",
         "def powerset(iterable):\n",
         "    \"powerset([1,2,3]) --> () (1,) (2,) (3,) (1,2) (1,3) (2,3) (1,2,3)\"\n",
@@ -320,7 +321,7 @@
         "\n",
         "&nbsp;\n",
         "\n",
-        "$\\exists y \\in \\mathbf R,\\ \\forall y \\in \\mathbf R, xy=y$ \n",
+        "$\\exists x \\in \\mathbf R,\\ \\forall y \\in \\mathbf R, xy=y$ \n",
         "\n",
         "日本語訳 $\\quad \\mathbf R$\n",
         "にある要素 $x$ が存在して、$\\mathbf R$ の任意の要素 $y$ に対して $xy=y$ が成立する。\n",
