--- a/math_arainoriko.ipynb
+++ b/math_arainoriko.ipynb
@@ -6,7 +6,7 @@
       "name": "math_arainoriko.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMOxWXLgwknahrm2NunWl6K",
+      "authorship_tag": "ABX9TyMKuhDOtbOBqUrKMyG6GpDA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -145,7 +145,16 @@
         "p.38\n",
         "\n",
         "命題 proposition のうち、証明されたものを定理 theorem と呼ぶ。\n",
-        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pNAFeH1xr02_"
+      },
+      "source": [
+        "---\n",
         "メモ $\\quad$ この本のあとの方で論理式のことを数文と呼び、日本語で意味を述べることを数文和訳、日本語の文を論理式にすることを和文数訳と言っていて、それがちょっとイヤ。 \n",
         "\n",
         "いまの考え。 論理式 (formula) と日常言語は違う。 言語による表現を論理式にすることで得られるものは大きく、逆も真なので、併記するのがよい。 key, item のセットで考える。 仮に formula, meaning と置こう。\n",
@@ -161,19 +170,17 @@
         "]\n",
         "```\n",
         "\n",
-        "簡易表現 併記する。 これで行こう。\n",
+        "簡易表現 => 併記する。 とりあえず、これで行こう。\n",
         "\n",
-        "* 1+2=3\n",
-        "* 1 足す 2 は 3 である\n",
+        "1+2=3  \n",
+        "1 足す 2 は 3 である\n",
         "\n",
-        "* $(x \\gt 0 \\rightarrow x = 2) \\land (x \\lt 0 \\rightarrow x = -5) $\n",
-        "* x が正の時、x = 2 であり、x が負の時、x=-5 である\n",
+        "$(x \\gt 0 \\rightarrow x = 2) \\land (x \\lt 0 \\rightarrow x = -5) $  \n",
+        "x が正の時、x = 2 であり、x が負の時、x=-5 である\n",
         "\n",
-        "* ｋｌｊｋ\n",
-        "* lj;jk\n",
+        "気づき $\\quad$ この本は $\\implies$ を使わず $\\rightarrow$ ですね!!!!\n",
         "\n",
-        "ｋｌｊｋ  \n",
-        "lj;jk  \n",
+        "$\\overset{\\text{def}}{\\Longleftrightarrow}$ は使っている。\n",
         "\n",
         "\n"
       ]
@@ -184,8 +191,67 @@
         "id": "37szXuFkm7H4"
       },
       "source": [
-        "this  \n",
-        "is"
+        "数文 (論理式)\n",
+        "\n",
+        "p.49 で初めて数文という言葉が出てくる。\n",
+        "\n",
+        "$$\n",
+        "(x=4 \\land x=6) \\rightarrow (3x+2y=24 \\land x+y = 10)\n",
+        "$$\n",
+        "このように純粋な数学の記号だけで表現した文を、この本では数文とよぶことにします。\n",
+        "\n",
+        "とのことだが、わたしのとりあえずのことばで書くと、\n",
+        "\n",
+        "このように論理記号だけで書いた文 論理記号文 を論理式 well-fromed formula と呼ぶ。 式の意味は\n",
+        "\n",
+        "$x=4$ かつ $y=6$ の時、方程式 $3x+2y=24$ と $x+y = 10$ が成り立つ。\n",
+        "\n",
+        "論理式の方も普通の書き方だと\n",
+        "\n",
+        "$$\n",
+        "x=4 \\land x=6 \\implies [3x+2y=24] \\land [x+y = 10]\n",
+        "$$\n",
+        "\n",
+        "になると思う。\n",
+        "\n",
+        "p.38からp.49にジャンプしてしまったので途中を埋める。\n",
+        "\n",
+        "1,2,3 は自然数である  \n",
+        "$1 \\lor 2 \\lor 3 \\in \\boldsymbol N$\n",
+        "\n",
+        "でいいか?\n",
+        "\n",
+        "$ x \\in \\{1,2,3\\} \\rightarrow x \\in \\boldsymbol N$\n",
+        "\n",
+        "かな。\n",
+        "\n",
+        "&nbsp;\n",
+        "\n",
+        "\n",
+        "円周率 $\\pi$ は 3.14 である  \n",
+        "$\\pi = 3.14$\n",
+        "\n",
+        "約 3.14 とか 小数点 3 位で四捨五入するととかはどうするか。\n",
+        "\n",
+        "&nbsp;\n",
+        "\n",
+        "父または母の姉を伯母と言う。\n",
+        "$x \\in sister(father \\lor mother) \\implies x \\in aunt$\n",
+        "\n",
+        "なんとなくよさげですね!!!!\n",
+        "\n",
+        "あと、やはり $\\rightarrow$ より $\\implies$ の方がよい。\n",
+        "\n",
+        "メモ $\\quad$ $x=3$ とおく、というのと $x=3$ である、というのの区別は、いまの考えでは書かれている文脈に依存する。 論理式としては同じなのではないか。 文の前半に \\implies の前に置かれれば、とおく時、という意味だし、単独ならば x が決まれば真偽がはっきりする命題だろう。\n",
+        "\n",
+        "$x$ は三角形である  \n",
+        "$x \\in triangle$\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
