Colaboratory を使用して作成しました

--- a/math_arainoriko.ipynb
+++ b/math_arainoriko.ipynb
@@ -6,7 +6,7 @@
       "name": "math_arainoriko.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMKuhDOtbOBqUrKMyG6GpDA",
+      "authorship_tag": "ABX9TyOEas20zZhXN9iyyWE4fhGh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -247,6 +247,25 @@
         "$x$ は三角形である  \n",
         "$x \\in triangle$\n",
         "\n",
+        "$n \\lt m \\implies [n+1 \\lt m+1]$\n",
+        "\n",
+        "$n = m \\land m = k \\implies [n = k]$\n",
+        "\n",
+        "$ 3 + 5 = 18$\n",
+        "\n",
+        "$n$ と $m$ のどちらも偶数ならば $n+m$ も偶数である。  \n",
+        "$n \\mod 2 = 0 \\land m \\mod 2 = 0 \\implies [ (n+m) \\mod 2 = 0]$\n",
+        "\n",
+        "$l$ を線とする。この時 $l$ の端は点である。\n",
+        "\n",
+        "$A,B$ を異なる点とする。 この時、$A,B$ を結ぶ直線 $l$ が存在する。  \n",
+        "$A\\in point \\land B \\in point \\land A \\neq B \\implies \\exists l [l = AB]$\n",
+        "\n",
+        "ふむ。苦しいね!!!!\n",
+        "\n",
+        "\n",
+        "数式も命題である。\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -260,7 +279,18 @@
         "id": "iSsbgytKbpJg"
       },
       "source": [
-        ""
+        "p.44\n",
+        "\n",
+        "10 の 2 乗は 100 である。  \n",
+        "$10^2 = 100$\n",
+        "\n",
+        "10 は偶数である。  \n",
+        "$10\\mod 2 = 0$\n",
+        "\n",
+        "10 は自然数である。  \n",
+        "$10 \\in \\mathbb N$\n",
+        "\n",
+        "\n"
       ]
     }
   ]
