--- a/math_arainoriko.ipynb
+++ b/math_arainoriko.ipynb
@@ -6,7 +6,7 @@
       "name": "math_arainoriko.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOEas20zZhXN9iyyWE4fhGh",
+      "authorship_tag": "ABX9TyM9eE4pJ3cl9QLTtbJCvsy5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,10 @@
       },
       "source": [
         "メモ\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
         "\n",
         "数学は言葉\n",
         "\n",
@@ -290,7 +294,37 @@
         "10 は自然数である。  \n",
         "$10 \\in \\mathbb N$\n",
         "\n",
+        "非負の偶数全体の集合  \n",
+        "$\\{x \\;|\\; x \\in \\mathbb N\\} \\cap \\{x \\;|\\; x \\mod 2 = 0 \\}$  \n",
+        "$\\{x \\;|\\; x \\in \\mathbb N \\;\\;\\land x \\mod 2 = 0 \\}$  \n",
+        "\n",
+        "ちょっと落ち着かないね。\n",
+        "\n",
+        "偶数全体の集合、ただし要素は自然数  \n",
+        "$\\{x \\;|\\; x \\mod 2 = 0 ,\\;\\; x \\in \\mathbb N\\}$   \n",
+        "\n",
+        "この方がしっくりくるが、意味は同じか。\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GJYLNfJ2eONP"
+      },
+      "source": [
+        "p.50\n",
+        "\n",
+        "2 に 3 を足したものは 5 に等しい。  \n",
+        "$2+3=5$\n",
+        "\n",
+        "$AB$ の長さと $BC$ の長さが等しいので、$\\triangle ABC$"
       ]
     }
   ]
